# tracking-pipeline-tasks

./: .env.example  .gitignore  README.md
.devcontainer/: devcontainer.json
firehose-transformations/: README.md  index.js  serverless.yml
firehose_tracker/: README.md  pyproject.toml
firehose_tracker/firehose_tracker/: config.py  test_tracker.py  test_tracker_mocked.py  tracker.py
session_attribution_fix/: README.md  pyproject.toml
session_attribution_fix/session_attribution_fix/: .user.yml  README.md  check_data.py  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
session_attribution_fix/session_attribution_fix/models/: fixed.sql  models.yml  raw.sql
tracker-app/: .env.example  README.md  load_test.sh  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml
tracker-app/tracker_app/: main.py  test_main.py
tracker-infra/: README.md  cloudwatch.tf  iam.tf  kinesis_firehose.tf  outputs.tf  s3.tf  variables.tf
