[tool.poetry]
name = "firehose-tracker"
version = "0.1.0"
description = "A basic firehose client to track events from HTTP microservices"
authors = ["Florian Schroeder <schroeder.florian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.59"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.9.0"
ruff = "^0.3.2"
moto = "^5.0.3"
boto3-stubs = "^1.34.60"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
