[tool.poetry]
name = "session-attribution-fix"
version = "0.1.0"
description = "DBT project to fix session attribution"
authors = ["Florian Schroeder <schroeder.florian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-duckdb = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
