[tool.poetry]
name = "tracker-app"
version = "0.1.0"
description = ""
authors = ["Florian Schroeder <schroeder.florian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firehose-tracker = {path = "../firehose_tracker/"}
fastapi = "^0.110.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.9.0"
ruff = "^0.3.2"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
